sync all changes with morganpugh.com

--- a/about-en.html
+++ b/about-en.html
@@ -1,107 +1,95 @@
 <!DOCTYPE HTML>
 <!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Strata by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-	<head>
-		<title>MRP Consulting - Business coaching and consultancy</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<html lang="en">
+<head>
+    <title>MRP Consulting - Business coaching and consultancy</title>
+    <meta charset="utf-8" />
+    <meta name="google" content="notranslate">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body class="is-preload">
+    <!-- Header -->
+    <header id="header">
+        <div class="inner">
+            <a href="index-en.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+            <h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.</h1>
+        </div>
+    </header>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.
-				</div>
-			</header>
+    <!-- Main -->
+    <div id="main">
+        <!-- One -->
+        <section id="one">
+            <div style="text-align:center;"><img src="images/logo.png" alt="" style="width:40%;height:auto;" /></div>
+            <div style="text-align:center;font-style:italic;"><h2>Clear communication, confident leadership</h2></div>
+            <div style="text-align:center;">
+                <a href="about-en.html">English</a> | 
+                <a href="about-fr.html">Français</a>
+                <hr style="width:115px;margin:10px auto;border:0.5px solid #ffffff;">
+            </div>
+            <ul class="actions">
+                <li><a href="index-en.html" class="button">Home</a></li>
+                <li><a href="about-en.html" class="button">About Me</a></li>
+                <li><a href="services-en.html" class="button">Services</a></li>
+                <li><a href="testimonials-en.html" class="button">Testimonials</a></li>
+                <li><a href="casestudies-en.html" class="button">Case Studies</a></li>
+            </ul>
+            <header class="major"><h2>About Me</h2></header>
+            <p>I am a British business communications and management consultant with over 20 years of corporate experience. Now based in Lyon, I work with businesses both locally and remotely, helping them confidently communicate and collaborate with English-speaking clients, partners, and stakeholders.</p>
+            <p>After more than two decades in the corporate world working as a software developer, leading IT teams, and navigating cross-functional projects, I've learned how crucial clear communication is for keeping things running smoothly. Over time, I noticed that misunderstandings between departments, stakeholders, and project teams—especially when people from different cultures or countries were involved—often led to delays, errors, and unnecessary rework.</p>
+            <p>What stood out was how language barriers, even among fluent English speakers, could unintentionally slow things down. For non-native English speakers in particular, these gaps often caused frustration, wasted resources, and made it harder to stay aligned with the team's goals. From this experience, I've built practical strategies to help teams communicate more clearly—especially for those where English isn't their first language.</p>
+            <p>My goal is to ensure everyone feels heard, understood, and confident in what they're doing. When communication clicks, organisations see fewer mistakes, faster progress, and better results. Plus, it makes work feel more collaborative and less stressful for everyone involved. Ultimately, my focus is on creating environments where people can thrive—where clarity leads to efficiency, and teamwork feels rewarding instead of frustrating. It's not just about fixing problems; it's about building a culture that values connection, respect, and shared success.</p>
+            <p>My expertise spans clear communication, negotiation, and leadership, as well as soft skills such as confidence building, mediation, and conflict resolution. With a strong technical background, I understand the challenges and limitations that technical teams face, enabling me to bridge the gap between complex ideas and clear, persuasive messaging. In the corporate world, I often faced high-pressure situations and saw how they could affect my teams' mental health. This led to developing my own systems to ensure I could identify early warning signs and implement practical strategies before issues escalated.</p>
+            <p>I started my own consultancy because I'm passionate about helping companies improve their English communication to work more efficiently and avoid misunderstandings. Clear communication not only boosts productivity but also reduces stress, overwork, and the mental health issues that often come from poor business practices. My goal is to support both the business and its people by creating healthier, more effective workplaces.</p>
+            <ul class="actions"><li><a href="services-en.html" class="button">Services</a></li></ul>
+        </section>
 
-		<!-- Main -->
-			<div id="main">
+        <!-- Three -->
+        <section id="three">
+            <h2>Get In Touch</h2>
+            <p>If you think my services will benefit your business, drop me a line and let's meet.</p>
+            <div class="row">
+                <div class="col-4 col-12-small">
+                    <ul class="labeled-icons">
+                        <li>
+                            <h3><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"></a></h3>
+                            <a href="mailto:morgan@morganpugh.com">morgan@morganpugh.com</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </div>
 
-				<!-- One -->
-					<section id="one">
-						<div style="text-align: center;">
-  						<img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
-						</div>
-						<div style="text-align: center; font-style: italic;">
-						<h2>Clear communication, confident leadership</h2>
-						</div>
-						<div style="text-align: center;">
-  							<a href="about-en.html">English</a> | 
-  							<a href="about-fr.html">Français</a>
-						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
-						</div>
-						<ul class="actions">
-							<li><a href="index-en.html" class="button">Home</a></li>
-							<li><a href="about-en.html" class="button">About Me</a></li>
-							<li><a href="services-en.html" class="button">Services</a></li>
-							<li><a href="testimonials-en.html" class="button">Testimonials</a></li>
-						</ul>
-						<header class="major">
-							<h2>About Me</h2>
-						</header>
-						<p>
-							I am a British business communications and management consultant with over 20 years of corporate experience. Now based in Lyon, I work with businesses both locally and remotely, helping them confidently communicate and collaborate with English-speaking clients, partners, and stakeholders. 
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <div class="labeled-icons">
+                <ul class="labeled-icons">
+                    <li>
+                        <a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
+                        <a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
+                    </li>
+                </ul>
+            </div>
+            <ul class="copyright">
+                <li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
 
-							</br></br>After more than two decades in the corporate world working as a software developer, leading IT teams, and navigating cross-functional projects I’ve learned how crucial clear communication is for keeping things running smoothly. Over time, I noticed that misunderstandings between departments, stakeholders, and project teams — especially when people from different cultures or countries were involved — often led to delays, errors, and unnecessary rework. 
-
-							</br></br>What stood out was how language barriers, even among fluent English speakers, could unintentionally slow things down. For non- native English speakers in particular, these gaps often caused frustration, wasted resources, and made it harder to stay aligned with the team’s goals. From this experience, I’ve built practical strategies to help teams communicate more clearly — especially for those where English isn’t their first language. 
-
-							</br></br>My goal is to ensure everyone feels heard, understood, and confident in what they’re doing. When communication clicks, organisations see fewer mistakes, faster progress, and better results. Plus, it makes work feel more collaborative and less stressful for everyone involved. Ultimately, my focus is on creating environments where people can thrive — where clarity leads to efficiency, and teamwork feels rewarding instead of frustrating. It’s not just about fixing problems; it’s about building a culture that values connection, respect, and shared success. 
-
-							</br></br>My expertise spans clear communication, negotiation, and leadership, as well as soft skills such as confidence building, mediation, and conflict resolution. With a strong technical background, I understand the challenges and limitations that technical teams face, enabling me to bridge the gap between complex ideas and clear, persuasive messaging. In the corporate world, I often faced high pressure situations and saw how they could affect my teams' mental health. This lead to developing my own systems to ensure I could identify early warning signs and implement practical strategies before issues escalate.
-
-							</br></br>I started my own consultancy because I’m passionate about helping companies improve their English communication to work more efficiently and avoid misunderstandings. Clear communication not only boosts productivity but also reduces stress, overwork, and the mental health issues that often come from poor business practices. My goal is to support both the business and its people by creating healthier, more effective workplaces.</p>
-
-						<ul class="actions">
-							<li><a href="services-en.html" class="button">Services</a></li>
-						</ul>
-					</section>					
-
-				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>If you think my services will benefit your business, drop me a line and let’s meet.
-						<div class="row">
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"></h3></a>
-										<a href="mailto:morgan@mrpconsulting.fr">morgan@mrpconsulting.fr</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-				<div class="labeled-icons">
-						<ul class="labeled-icons"><li><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@mrpconsulting.fr" class="label">morgan@mrpconsulting.fr</a>
-						</li></ul>
-					</div>
-					<ul class="copyright">
-						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
 </html>
