--- a/about-fr.html
+++ b/about-fr.html
@@ -1,183 +1,97 @@
 <!DOCTYPE HTML>
 <!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Strata by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-	<head>
-		<title>MRP Consulting - Coaching et conseil en entreprise</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<html lang="fr">
+<head>
+    <title>MRP Consulting - Coaching et conseil en entreprise</title>
+    <meta charset="utf-8" />
+    <meta name="google" content="notranslate">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body class="is-preload">
+    <!-- Header -->
+    <header id="header">
+        <div class="inner">
+            <a href="index-fr.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+            <h1><strong>Je suis Morgan</strong>, consultant en affaires anglophone spécialisé dans les différences culturelles, le bien-être des employés et les stratégies de management efficaces.</h1>
+        </div>
+    </header>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index-fr.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<h1><strong>Je suis Morgan</strong>, consultant en affaires anglophone spécialisé dans les différences culturelles, le bien-être des employés et les stratégies de management efficaces.
-				</div>
-			</header>
+    <!-- Main -->
+    <div id="main">
+        <!-- One -->
+        <section id="one">
+            <div style="text-align:center;"><img src="images/logo.png" alt="" style="width:40%;height:auto;" /></div>
+            <div style="text-align:center;font-style:italic;"><h2>Une communication claire, un leadership affirmé</h2></div>
+            <div style="text-align:center;">
+                <a href="about-en.html">English</a> | 
+                <a href="about-fr.html">Français</a>
+                <hr style="width:115px;margin:10px auto;border:0.5px solid #ffffff;">
+            </div>
+            <ul class="actions">
+                <li><a href="index-fr.html" class="button">Accueil</a></li>
+                <li><a href="about-fr.html" class="button">À propos de moi</a></li>
+                <li><a href="services-fr.html" class="button">Services</a></li>
+                <li><a href="testimonials-fr.html" class="button">Avis clients</a></li>
+                <li><a href="casestudies-fr.html" class="button">Exemples clients</a></li>
+            </ul>
+            <header class="major"><h2>À propos de moi</h2></header>
+            <p>Je suis un consultant britannique en communication d'entreprise et en management, avec plus de 20 ans d'expérience dans le monde de l'entreprise. Aujourd'hui basé à Lyon, je travaille avec des entreprises locales et à distance, en les aidant à communiquer et à collaborer avec assurance avec des clients, partenaires et parties prenantes anglophones.</p>
+            <p>Après plus de deux décennies passées dans le monde de l'entreprise—en tant que développeur logiciel, responsable d'équipes IT et coordinateur de projets transversaux—j'ai compris à quel point une communication claire est essentielle pour que tout fonctionne efficacement. Au fil du temps, j'ai constaté que les malentendus entre services, parties prenantes et équipes projets, en particulier lorsqu'ils impliquaient des personnes de cultures ou de pays différents, entraînaient souvent des retards, des erreurs et un travail inutile.</p>
+            <p>Ce qui m'a le plus frappé, c'est à quel point les barrières linguistiques, même entre personnes parlant couramment l'anglais, pouvaient ralentir les échanges de manière involontaire. Pour les non-anglophones en particulier, ces écarts créaient de la frustration, du gaspillage de ressources, et compliquaient l'alignement autour des objectifs communs.</p>
+            <p>De cette expérience, j'ai tiré des stratégies pratiques pour aider les équipes à mieux communiquer—notamment celles dont l'anglais n'est pas la langue maternelle. Mon objectif est de faire en sorte que chacun se sente écouté, compris et confiant dans ce qu'il fait. Quand la communication fonctionne, les organisations constatent moins d'erreurs, une progression plus rapide et de meilleurs résultats. Et cela rend le travail plus collaboratif et moins stressant pour tout le monde.</p>
+            <p>Mon but ultime est de créer des environnements où les gens peuvent s'épanouir—où la clarté favorise l'efficacité, et où le travail d'équipe devient gratifiant plutôt que frustrant. Il ne s'agit pas seulement de résoudre des problèmes, mais de construire une culture fondée sur la connexion, le respect et la réussite partagée.</p>
+            <p>Mon expertise couvre la communication claire, la négociation et le leadership, ainsi que les compétences interpersonnelles telles que le développement de la confiance en soi, la médiation et la résolution de conflits. Grâce à ma solide expérience technique, je comprends les défis et les contraintes auxquels sont confrontées les équipes techniques, ce qui me permet de faire le lien entre idées complexes et messages clairs et convaincants.</p>
+            <p>Dans le monde de l'entreprise, j'ai souvent été confronté à des situations sous haute pression et j'ai vu à quel point cela pouvait impacter la santé mentale de mes équipes. Cela m'a poussé à développer mes propres systèmes pour repérer les signes avant-coureurs et mettre en place des stratégies concrètes avant que les problèmes ne s'aggravent.</p>
+            <p>J'ai créé mon propre cabinet de conseil parce que je suis passionné par l'idée d'aider les entreprises à améliorer leur communication en anglais, afin de travailler plus efficacement et d'éviter les malentendus. Une communication claire ne renforce pas seulement la productivité ; elle réduit aussi le stress, la surcharge de travail et les problèmes de santé mentale qui découlent souvent de mauvaises pratiques professionnelles. Mon objectif est de soutenir à la fois l'entreprise et ses collaborateurs en créant des environnements de travail plus sains et plus efficaces.</p>
+            <ul class="actions"><li><a href="services-fr.html" class="button">Services</a></li></ul>
+        </section>
 
-		<!-- Main -->
-			<div id="main">
+        <!-- Three -->
+        <section id="three">
+            <h2>Contact</h2>
+            <p>Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous.</p>
+            <div class="row">
+                <div class="col-4 col-12-small">
+                    <ul class="labeled-icons">
+                        <li>
+                            <h3><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"></a></h3>
+                            <a href="mailto:morgan@morganpugh.com">morgan@morganpugh.com</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </div>
 
-<!-- One -->
-					<section id="one">
-						<div style="text-align: center;">
-  						<img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
-						</div>
-						<div style="text-align: center; font-style: italic;">
-						<h2>Une communication claire, un leadership affirmé</h2>
-						</div>
-						<div style="text-align: center;">
-  							<a href="about-en.html">English</a> | 
-  							<a href="about-fr.html">Français</a>
-						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
-						</div>
-						<ul class="actions">
-							<li><a href="index-fr.html" class="button">Accueil</a></li>
-							<li><a href="about-fr.html" class="button">À propos de moi</a></li>
-							<li><a href="services-fr.html" class="button">Services</a></li>
-							<li><a href="testimonials-fr.html" class="button">Avis clients</a></li>
-						</ul>
-						<header class="major">
-							<h2>À propos de moi</h2>
-						</header>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <div class="labeled-icons">
+                <ul class="labeled-icons">
+                    <li>
+                        <a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
+                        <a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
+                    </li>
+                </ul>
+            </div>
+            <ul class="copyright">
+                <li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
 
-Je suis un consultant britannique en
-communication d’entreprise et en
-management, avec plus de 20 ans
-d’expérience dans le monde de l’entreprise.
-Aujourd’hui basé à Lyon, je travaille avec des
-entreprises locales et à distance, en les aidant
-à communiquer et à collaborer avec
-assurance avec des clients, partenaires et
-parties prenantes anglophones.
-</br></br>
-Après plus de deux décennies passées dans le
-monde de l’entreprise — en tant que
-développeur logiciel, responsable d’équipes IT
-et coordinateur de projets transversaux — j’ai
-compris à quel point une communication claire
-est essentielle pour que tout fonctionne
-efficacement. Au fil du temps, j’ai constaté que
-les malentendus entre services, parties
-prenantes et équipes projets — en particulier
-lorsqu’ils impliquaient des personnes de
-cultures ou de pays différents — entraînaient
-souvent des retards, des erreurs et un travail
-inutile.
-</br></br>
-Ce qui m’a le plus frappé, c’est à quel point les
-barrières linguistiques, même entre personnes
-parlant couramment l’anglais, pouvaient
-ralentir les échanges de manière involontaire.
-Pour les non-anglophones en particulier, ces
-écarts créaient de la frustration, du gaspillage
-de ressources, et compliquaient l’alignement
-autour des objectifs communs.
-</br></br>
-De cette expérience, j’ai tiré des stratégies
-pratiques pour aider les équipes à mieux
-communiquer — notamment celles dont
-l’anglais n’est pas la langue maternelle. Mon
-objectif est de faire en sorte que chacun se
-sente écouté, compris et confiant dans ce qu’il
-fait. Quand la communication fonctionne, les
-organisations constatent moins d’erreurs, une
-progression plus rapide et de meilleurs
-résultats. Et cela rend le travail plus collaboratif
-et moins stressant pour tout le monde.
-</br></br>
-Mon but ultime est de créer des
-environnements où les gens peuvent
-s’épanouir — où la clarté favorise l’efficacité, et
-où le travail d’équipe devient gratifiant plutôt
-que frustrant. Il ne s’agit pas seulement de
-résoudre des problèmes, mais de construire
-une culture fondée sur la connexion, le respect
-et la réussite partagée.
-</br></br>
-Mon expertise couvre la communication claire,
-la négociation et le leadership, ainsi que les
-compétences interpersonnelles telles que le
-développement de la confiance en soi, la
-médiation et la résolution de conflits. Grâce à
-ma solide expérience technique, je comprends
-les défis et les contraintes auxquels sont
-confrontées les équipes techniques, ce qui me
-permet de faire le lien entre idées complexes et
-messages clairs et convaincants.
-</br></br>
-Dans le monde de l’entreprise, j’ai souvent été
-confronté à des situations sous haute pression
-et j’ai vu à quel point cela pouvait impacter la
-santé mentale de mes équipes. Cela m’a
-poussé à développer mes propres systèmes
-pour repérer les signes avant-coureurs et
-mettre en place des stratégies concrètes avant
-que les problèmes ne s’aggravent.
-</br></br>
-J’ai créé mon propre cabinet de conseil parce
-que je suis passionné par l’idée d’aider les
-entreprises à améliorer leur communication en
-anglais, afin de travailler plus efficacement et
-d’éviter les malentendus. Une communication
-claire ne renforce pas seulement la
-productivité ; elle réduit aussi le stress, la
-surcharge de travail et les problèmes de santé
-mentale qui découlent souvent de mauvaises
-pratiques professionnelles. Mon objectif est de
-soutenir à la fois l’entreprise et ses
-collaborateurs en créant des environnements
-de travail plus sains et plus efficaces.
-</br></br>
-						<ul class="actions">
-							<li><a href="services-fr.html" class="button">Services</a></li>
-						</ul>
-					</section>					
-
-				<!-- Three -->
-					<section id="three">
-						<h2>Contact</h2>
-						Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous</p>
-						<div class="row">
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"></h3></a>
-										<a href="mailto:morgan@mrpconsulting.fr">morgan@mrpconsulting.fr</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-				<div class="labeled-icons">
-						<ul class="labeled-icons"><li><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@mrpconsulting.fr" class="label">morgan@mrpconsulting.fr</a>
-						</li></ul>
-					</div>
-					<ul class="copyright">
-						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
 </html>
