--- a/index-en.html
+++ b/index-en.html
@@ -1,97 +1,91 @@
 <!DOCTYPE HTML>
 <!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Strata by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-	<head>
-		<title>MRP Consulting - Business coaching and consultancy</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<html lang="en">
+<head>
+    <title>MRP Consulting - Business coaching and consultancy</title>
+    <meta charset="utf-8" />
+    <meta name="google" content="notranslate">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body class="is-preload">
+    <!-- Header -->
+    <header id="header">
+        <div class="inner">
+            <a href="index-en.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+            <h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.</h1>
+        </div>
+    </header>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index-en.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.
-				</div>
-			</header>
+    <!-- Main -->
+    <div id="main">
+        <!-- One -->
+        <section id="one">
+            <div style="text-align:center;"><img src="images/logo.png" alt="" style="width:40%;height:auto;" /></div>
+            <div style="text-align:center;font-style:italic;"><h2>Clear communication, confident leadership</h2></div>
+            <div style="text-align:center;">
+                <a href="index-en.html">English</a> | 
+                <a href="index-fr.html">Français</a>
+                <hr style="width:115px;margin:10px auto;border:0.5px solid #ffffff;">
+            </div>
+            <ul class="actions">
+                <li><a href="index-en.html" class="button">Home</a></li>
+                <li><a href="about-en.html" class="button">About Me</a></li>
+                <li><a href="services-en.html" class="button">Services</a></li>
+                <li><a href="testimonials-en.html" class="button">Testimonials</a></li>
+                <li><a href="casestudies-en.html" class="button">Case Studies</a></li>
+            </ul>
+            <header class="major"><h2>Hi, I'm Morgan 👋</h2></header>
+            <p>A British consultant with 20+ years' experience in software development, project management, and technical leadership. Based in Lyon, I help businesses communicate with confidence and clarity in English, ensuring they build stronger relationships with international clients, partners, and stakeholders.</p>
+            <p>Through tailored coaching in business English, presentations, sales pitches, and negotiations, I sharpen communication and leadership skills while also providing practical strategies for time management, problem solving, and stress reduction.</p>
+            <p>My goal is to equip teams and individuals with the tools they need to excel globally, stay productive, and foster leadership skills for international success. I specialise in clear messaging, conflict resolution, and proactive stress and burnout management.</p>
+        </section>
 
-		<!-- Main -->
-			<div id="main">
+        <!-- Three -->
+        <section id="three">
+            <h2>Get In Touch</h2>
+            <p>If you think my services will benefit your business, drop me a line and let's meet.</p>
+            <div class="row">
+                <div class="col-4 col-12-small">
+                    <ul class="labeled-icons">
+                        <li>
+                            <h3><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"></a></h3>
+                            <a href="mailto:morgan@morganpugh.com">morgan@morganpugh.com</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </div>
 
-				<!-- One -->
-					<section id="one">
-						<div style="text-align: center;">
-  						<img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
-						</div>
-						<div style="text-align: center; font-style: italic;">
-						<h2>Clear communication, confident leadership</h2>
-						</div>
-						<div style="text-align: center;">
-  							<a href="index-en.html">English</a> | 
-  							<a href="index.html">Français</a>
-						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
-						</div>
-						<ul class="actions">
-							<li><a href="index-en.html" class="button">Home</a></li>
-							<li><a href="about-en.html" class="button">About Me</a></li>
-							<li><a href="services-en.html" class="button">Services</a></li>
-							<li><a href="testimonials-en.html" class="button">Testimonials</a></li>
-						</ul>
-						<header class="major">
-							<h2>Hi, I'm Morgan 👋</h2>
-						</header>
-						<p>A British consultant with 20+ years’ experience in software development, project management, and technical leadership. Based in Lyon, I help businesses communicate with confidence and clarity in English, ensuring they build stronger relationships with international clients, partners, and stakeholders. 
-						</br></br>
-						Through tailored coaching in business English, presentations, sales pitches, and negotiations, I sharpen communication and leadership skills while also providing practical strategies for time management, problem solving, and stress reduction. 
-						</br></br>
-						My goal is to equip teams and individuals with the tools they need to excel globally, stay productive, and foster leadership skills for international success. I specialise in clear messaging, conflict resolution, and proactive stress and burnout management.</p>
-					</section>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <div class="labeled-icons">
+                <ul class="labeled-icons">
+                    <li>
+                        <a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
+                        <a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
+                    </li>
+                </ul>
+            </div>
+            <ul class="copyright">
+                <li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>If you think my services will benefit your business, drop me a line and let’s meet.
-						</p>
-						<div class="row">
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"></h3></a>
-										<a href="mailto:morgan@mrpconsulting.fr">morgan@mrpconsulting.fr</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="labeled-icons">
-						<ul class="labeled-icons"><li><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@mrpconsulting.fr" class="label">morgan@mrpconsulting.fr</a>
-						</li></ul>
-					</div>
-					<ul class="copyright">
-						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
 </html>
