--- a/services-en.html
+++ b/services-en.html
@@ -1,156 +1,128 @@
 <!DOCTYPE HTML>
 <!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Strata by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-	<head>
-		<title>MRP Consulting - Business coaching and consultancy</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<html lang="en">
+<head>
+    <title>MRP Consulting - Business coaching and consultancy</title>
+    <meta charset="utf-8" />
+    <meta name="google" content="notranslate">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body class="is-preload">
+    <!-- Header -->
+    <header id="header">
+        <div class="inner">
+            <a href="index-en.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+            <h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.</h1>
+        </div>
+    </header>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index-en.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.
-				</div>
-			</header>
+    <!-- Main -->
+    <div id="main">
+        <!-- Services Section -->
+        <section id="one">
+            <div style="text-align:center;"><img src="images/logo.png" alt="" style="width:40%;height:auto;" /></div>
+            <div style="text-align:center;font-style:italic;"><h2>Clear communication, confident leadership</h2></div>
+            <div style="text-align:center;">
+                <a href="services-en.html">English</a> | 
+                <a href="services-fr.html">Français</a>
+                <hr style="width:115px;margin:10px auto;border:0.5px solid #ffffff;">
+            </div>
 
-		<!-- Main -->
-			<div id="main">
+            <ul class="actions">
+                <li><a href="index-en.html" class="button">Home</a></li>
+                <li><a href="about-en.html" class="button">About Me</a></li>
+                <li><a href="services-en.html" class="button">Services</a></li>
+                <li><a href="testimonials-en.html" class="button">Testimonials</a></li>
+                <li><a href="casestudies-en.html" class="button">Case Studies</a></li>
+            </ul>
 
-<!-- One -->
-				<!-- One -->
-					<section id="one">
-						<div style="text-align: center;">
-  						<img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
-						</div>
-						<div style="text-align: center; font-style: italic;">
-						<h2>Clear communication, confident leadership</h2>
-						</div>
-						<div style="text-align: center;">
-  							<a href="services-en.html">English</a> | 
-  							<a href="services-fr.html">Français</a>
-						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
-						</div>
-						<ul class="actions">
-							<li><a href="index-en.html" class="button">Home</a></li>
-							<li><a href="about-en.html" class="button">About Me</a></li>
-							<li><a href="services-en.html" class="button">Services</a></li>
-							<li><a href="testimonials-en.html" class="button">Testimonials</a></li>
-						</ul>
-						<header class="major">
-							<h2>Services</h2>
-						</header>
-						<p>
-							<h2>Business English Communications and Management Consultancy</h2>
-							Enhance your company’s global impact with expert guidance on clear, professional English communication and effective management strategies. I help businesses build confidence when dealing with English-speaking clients, partners, and stakeholders, ensuring your messages are delivered with precision, authority, and cultural sensitivity.</p>
-						<p>
-							<h2>Presentation skills coaching</h2>
-							I provide practical coaching to transform presentations into impactful, engaging experiences. From structuring your narrative to mastering confident delivery in English, I’ll help you capture and hold your audience’s attention.
-						</p>
-						<p>
-							<h2>Cultural differences training</h2>
-							Understanding cultural nuances is key to successful international collaboration. I help professionals navigate British and other English-speaking business cultures to avoid misunderstandings and build stronger, lasting relationships.
-						</p>
-						<p>
-						<h2>Sales pitch clarity training</h2>
+            <header class="major"><h2>Services</h2></header>
 
-						Turn your ideas into persuasive, structured, and concise sales pitches that resonate with English-speaking audiences. I’ll help you refine your messaging, sharpen your delivery, and increase your chances of winning business or investment.
-						</p>
-						<p>
-						<h2>Negotiation coaching</h2>
-						Master the art of negotiation in English with strategies to clearly express your goals, build trust, and achieve win-win outcomes in high-stakes discussions with international partners.
-						</p>
-						<p>
-						<h2>Project management coaching</h2>
-Boost efficiency and results with tailored
-project management coaching, focusing on
-time and resource management, effective
-communication, prioritisation, and
-collaboration with English-speaking teams and
-clients.
-						</p>
-<hr class="custom-line">
-<h1>Individual Employee Services
-						<h2>Burn out mitigation strategies</h2>
-Prevent burnout before it happens. I provide
-practical strategies to identify early signs of
-fatigue, create sustainable work habits, and
-maintain energy and focus over the long term.
-						<p>
-						<h2>Stress reduction strategies</h2>
-Learn how to manage stress effectively with
-proven techniques that improve focus, clarity,
-and emotional balance, ensuring you stay
-calm and productive under pressure.
-						</p>
-						<p>
-						<h2>Work-life balance techniques</h2>
-I help professionals find the right balance
-between personal life and career demands,
-offering tailored methods to reduce overwork
-and maintain long-term motivation and
-satisfaction.
-						</p>
-						<p>
-<hr class="custom-line">							
-						<h1>Small Business and Startup Specific Services</h1>
-For small businesses and startups aiming to
-expand internationally, I provide tailored
-coaching to improve English communication,
-ensuring you present your services, proposals,
-and brand messages with clarity and
-professionalism, building trust and confidence
-with English-speaking partners and clients.
-						</p>
-					</section>
+            <section>
+                <h3>Business English Communications and Management Consultancy</h3>
+                <p>Enhance your company's global impact with expert guidance on clear, professional English communication and effective management strategies. I help businesses build confidence when dealing with English-speaking clients, partners, and stakeholders, ensuring your messages are delivered with precision, authority, and cultural sensitivity.</p>
 
+                <h3>Presentation Skills Coaching</h3>
+                <p>I provide practical coaching to transform presentations into impactful, engaging experiences. From structuring your narrative to mastering confident delivery in English, I'll help you capture and hold your audience's attention.</p>
 
+                <h3>Cultural Differences Training</h3>
+                <p>Understanding cultural nuances is key to successful international collaboration. I help professionals navigate British and other English-speaking business cultures to avoid misunderstandings and build stronger, lasting relationships.</p>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Contact</h2>
-						<p>If you think my services will benefit your business, drop me a line and let’s meet.
-						<div class="row">
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"></h3></a>
-										<a href="mailto:morgan@mrpconsulting.fr">morgan@mrpconsulting.fr</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
+                <h3>Sales Pitch Clarity Training</h3>
+                <p>Turn your ideas into persuasive, structured, and concise sales pitches that resonate with English-speaking audiences. I'll help you refine your messaging, sharpen your delivery, and increase your chances of winning business or investment.</p>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="labeled-icons">
-						<ul class="labeled-icons"><li><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@mrpconsulting.fr" class="label">morgan@mrpconsulting.fr</a>
-						</li></ul>
-					</div>
-					<ul class="copyright">
-						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+                <h3>Negotiation Coaching</h3>
+                <p>Master the art of negotiation in English with strategies to clearly express your goals, build trust, and achieve win-win outcomes in high-stakes discussions with international partners.</p>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+                <h3>Project Management Coaching</h3>
+                <p>Boost efficiency and results with tailored project management coaching, focusing on time and resource management, effective communication, prioritisation, and collaboration with English-speaking teams and clients.</p>
 
-	</body>
+                <hr class="custom-line">
+
+                <h3>Individual Employee Services</h3>
+
+                <h4>Burnout Mitigation Strategies</h4>
+                <p>Prevent burnout before it happens. I provide practical strategies to identify early signs of fatigue, create sustainable work habits, and maintain energy and focus over the long term.</p>
+
+                <h4>Stress Reduction Strategies</h4>
+                <p>Learn how to manage stress effectively with proven techniques that improve focus, clarity, and emotional balance, ensuring you stay calm and productive under pressure.</p>
+
+                <h4>Work-Life Balance Techniques</h4>
+                <p>I help professionals find the right balance between personal life and career demands, offering tailored methods to reduce overwork and maintain long-term motivation and satisfaction.</p>
+
+                <hr class="custom-line">
+
+                <h3>Small Business and Startup Specific Services</h3>
+                <p>For small businesses and startups aiming to expand internationally, I provide tailored coaching to improve English communication, ensuring you present your services, proposals, and brand messages with clarity and professionalism, building trust and confidence with English-speaking partners and clients.</p>
+            </section>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="three">
+            <h2>Contact</h2>
+            <p>If you think my services will benefit your business, drop me a line and let's meet.</p>
+            <div class="row">
+                <div class="col-4 col-12-small">
+                    <ul class="labeled-icons">
+                        <li>
+                            <h3><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"></a></h3>
+                            <a href="mailto:morgan@morganpugh.com">morgan@morganpugh.com</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <div class="labeled-icons">
+                <ul class="labeled-icons">
+                    <li>
+                        <a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
+                        <a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
+                    </li>
+                </ul>
+            </div>
+            <ul class="copyright">
+                <li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
 </html>
