--- a/services-fr.html
+++ b/services-fr.html
@@ -1,127 +1,128 @@
 <!DOCTYPE HTML>
 <!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Strata by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-	<head>
-		<title>MRP Consulting - Coaching et conseil en entreprise</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<html lang="fr">
+<head>
+    <title>MRP Consulting - Coaching et conseil en entreprise</title>
+    <meta charset="utf-8" />
+    <meta name="google" content="notranslate">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body class="is-preload">
+    <!-- Header -->
+    <header id="header">
+        <div class="inner">
+            <a href="index-fr.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+            <h1><strong>Je suis Morgan</strong>, consultant en affaires anglophone spécialisé dans les différences culturelles, le bien-être des employés et les stratégies de management efficaces.</h1>
+        </div>
+    </header>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index-fr.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<h1><strong>Je suis Morgan</strong>, consultant en affaires anglophone spécialisé dans les différences culturelles, le bien-être des employés et les stratégies de management efficaces.
-				</div>
-			</header>
+    <!-- Main -->
+    <div id="main">
+        <!-- Services Section -->
+        <section id="one">
+            <div style="text-align:center;"><img src="images/logo.png" alt="" style="width:40%;height:auto;" /></div>
+            <div style="text-align:center;font-style:italic;"><h2>Une communication claire, un leadership affirmé</h2></div>
+            <div style="text-align:center;">
+                <a href="services-en.html">English</a> | 
+                <a href="services-fr.html">Français</a>
+                <hr style="width:115px;margin:10px auto;border:0.5px solid #ffffff;">
+            </div>
 
-		<!-- Main -->
-			<div id="main">
+            <ul class="actions">
+                <li><a href="index-fr.html" class="button">Accueil</a></li>
+                <li><a href="about-fr.html" class="button">À propos de moi</a></li>
+                <li><a href="services-fr.html" class="button">Services</a></li>
+                <li><a href="testimonials-fr.html" class="button">Avis clients</a></li>
+                <li><a href="casestudies-fr.html" class="button">Exemples clients</a></li>
+            </ul>
 
-					<section id="one">
-						<div style="text-align: center;">
-  						<img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
-						</div>
-						<div style="text-align: center; font-style: italic;">
-						<h2>Une communication claire, un leadership affirmé</h2>
-						</div>
-						<div style="text-align: center;">
-  							<a href="services-en.html">English</a> | 
-  							<a href="services-fr.html">Français</a>
-						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
-						</div>
-						<ul class="actions">
-							<li><a href="index-fr.html" class="button">Accueil</a></li>
-							<li><a href="about-fr.html" class="button">À propos de moi</a></li>
-							<li><a href="services-fr.html" class="button">Services</a></li>
-							<li><a href="testimonials-fr.html" class="button">Avis clients</a></li>
-						</ul>
-						<header class="major">
-							<h2>Services</h2>
-						</header>
-						<p>
-							<h2>Conseil en communication et management en anglais des affaires</h2>
-Renforcez l’impact global de votre entreprise grâce à des conseils d’expert sur une communication professionnelle claire en anglais et des stratégies de management efficaces. J’aide les entreprises à gagner en confiance lorsqu’elles traitent avec des clients, partenaires et parties prenantes anglophones, en veillant à ce que vos messages soient transmis avec précision, autorité et sensibilité culturelle.						<p>
-							<h2>Coaching en compétences de présentation</h2>
-Je propose un coaching pratique pour transformer vos présentations en expériences percutantes et engageantes. De la structuration de votre discours à la maîtrise d’une livraison confiante en anglais, je vous aide à capter et maintenir l’attention de votre audience.						</p>
-						<p>
-							<h2>Formation sur les différences culturelles</h2>
-Comprendre les nuances culturelles est essentiel pour réussir la collaboration internationale. J’aide les professionnels à naviguer dans les cultures d’affaires britanniques et autres anglophones afin d’éviter les malentendus et de construire des relations solides et durables.						</p>
-						<p>
-						<h2>Formation à la clarté des arguments commerciaux</h2>
-Transformez vos idées en présentations commerciales persuasives, structurées et concises, qui résonnent auprès des publics anglophones. Je vous aide à affiner votre message, à perfectionner votre prestation et à augmenter vos chances de remporter des affaires ou des investissements.						</p>
-						<p>
-						<h2>Coaching en négociation</h2>
-Maîtrisez l’art de la négociation en anglais avec des stratégies pour exprimer clairement vos objectifs, établir la confiance et obtenir des résultats gagnant-gagnant lors de discussions à enjeux élevés avec des partenaires internationaux.						</p>
-						<p>
-						<h2>Coaching en gestion de projet</h2>
-Améliorez l’efficacité et les résultats grâce à un coaching personnalisé en gestion de projet, en mettant l’accent sur la gestion du temps et des ressources, la communication efficace, la priorisation et la collaboration avec des équipes et clients anglophones.
-						</p>
-<hr class="custom-line">
-<h1>Services individuels pour les employés
-						<h2>Stratégies de prévention du burn-out</h2>
-Prévenez le burn-out avant qu’il ne survienne. Je propose des stratégies pratiques pour identifier les signes précoces de fatigue, créer des habitudes de travail durables et maintenir énergie et concentration sur le long terme.
-						<p>
-						<h2>Stratégies de réduction du stress</h2>
-Apprenez à gérer le stress efficacement grâce à des techniques éprouvées qui améliorent la concentration, la clarté et l’équilibre émotionnel, vous assurant de rester calme et productif sous pression.
-						</p>
-						<p>
-						<h2>Techniques d’équilibre vie professionnelle / vie personnelle</h2>
-J’aide les professionnels à trouver le bon équilibre entre vie personnelle et exigences professionnelles, en proposant des méthodes personnalisées pour réduire la surcharge de travail et maintenir motivation et satisfaction sur le long terme.
-						</p>
-						<p>
-<hr class="custom-line">							
-						<h1>Services spécifiques aux petites entreprises et startups</h1>
-Pour les petites entreprises et startups souhaitant se développer à l’international, je propose un coaching sur mesure pour améliorer la communication en anglais, afin de présenter vos services, propositions et messages de marque avec clarté et professionnalisme, renforçant ainsi la confiance avec vos partenaires et clients anglophones.
-						</p>
-					</section>
+            <header class="major"><h2>Services</h2></header>
 
+            <section>
+                <h3>Conseil en communication et management en anglais des affaires</h3>
+                <p>Renforcez l'impact global de votre entreprise grâce à des conseils d'expert sur une communication professionnelle claire en anglais et des stratégies de management efficaces. J'aide les entreprises à gagner en confiance lorsqu'elles traitent avec des clients, partenaires et parties prenantes anglophones, en veillant à ce que vos messages soient transmis avec précision, autorité et sensibilité culturelle.</p>
 
+                <h3>Coaching en compétences de présentation</h3>
+                <p>Je propose un coaching pratique pour transformer vos présentations en expériences percutantes et engageantes. De la structuration de votre discours à la maîtrise d'une livraison confiante en anglais, je vous aide à capter et maintenir l'attention de votre audience.</p>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Contact</h2>
-						Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous</p>
-						<div class="row">
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"></h3></a>
-										<a href="mailto:morgan@mrpconsulting.fr">morgan@mrpconsulting.fr</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
+                <h3>Formation sur les différences culturelles</h3>
+                <p>Comprendre les nuances culturelles est essentiel pour réussir la collaboration internationale. J'aide les professionnels à naviguer dans les cultures d'affaires britanniques et autres anglophones afin d'éviter les malentendus et de construire des relations solides et durables.</p>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="labeled-icons">
-						<ul class="labeled-icons"><li><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@mrpconsulting.fr" class="label">morgan@mrpconsulting.fr</a>
-						</li></ul>
-					</div>
-					<ul class="copyright">
-						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+                <h3>Formation à la clarté des arguments commerciaux</h3>
+                <p>Transformez vos idées en présentations commerciales persuasives, structurées et concises, qui résonnent auprès des publics anglophones. Je vous aide à affiner votre message, à perfectionner votre prestation et à augmenter vos chances de remporter des affaires ou des investissements.</p>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+                <h3>Coaching en négociation</h3>
+                <p>Maîtrisez l'art de la négociation en anglais avec des stratégies pour exprimer clairement vos objectifs, établir la confiance et obtenir des résultats gagnant-gagnant lors de discussions à enjeux élevés avec des partenaires internationaux.</p>
 
-	</body>
+                <h3>Coaching en gestion de projet</h3>
+                <p>Améliorez l'efficacité et les résultats grâce à un coaching personnalisé en gestion de projet, en mettant l'accent sur la gestion du temps et des ressources, la communication efficace, la priorisation et la collaboration avec des équipes et clients anglophones.</p>
+
+                <hr class="custom-line">
+
+                <h3>Services individuels pour les employés</h3>
+
+                <h4>Stratégies de prévention du burn-out</h4>
+                <p>Prévenez le burn-out avant qu'il ne survienne. Je propose des stratégies pratiques pour identifier les signes précoces de fatigue, créer des habitudes de travail durables et maintenir énergie et concentration sur le long terme.</p>
+
+                <h4>Stratégies de réduction du stress</h4>
+                <p>Apprenez à gérer le stress efficacement grâce à des techniques éprouvées qui améliorent la concentration, la clarté et l'équilibre émotionnel, vous assurant de rester calme et productif sous pression.</p>
+
+                <h4>Techniques d'équilibre vie professionnelle / vie personnelle</h4>
+                <p>J'aide les professionnels à trouver le bon équilibre entre vie personnelle et exigences professionnelles, en proposant des méthodes personnalisées pour réduire la surcharge de travail et maintenir motivation et satisfaction sur le long terme.</p>
+
+                <hr class="custom-line">
+
+                <h3>Services spécifiques aux petites entreprises et startups</h3>
+                <p>Pour les petites entreprises et startups souhaitant se développer à l'international, je propose un coaching sur mesure pour améliorer la communication en anglais, afin de présenter vos services, propositions et messages de marque avec clarté et professionnalisme, renforçant ainsi la confiance avec vos partenaires et clients anglophones.</p>
+            </section>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="three">
+            <h2>Contact</h2>
+            <p>Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous.</p>
+            <div class="row">
+                <div class="col-4 col-12-small">
+                    <ul class="labeled-icons">
+                        <li>
+                            <h3><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"></a></h3>
+                            <a href="mailto:morgan@morganpugh.com">morgan@morganpugh.com</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <div class="labeled-icons">
+                <ul class="labeled-icons">
+                    <li>
+                        <a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
+                        <a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
+                    </li>
+                </ul>
+            </div>
+            <ul class="copyright">
+                <li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
 </html>
