--- a/testimonials-en.html
+++ b/testimonials-en.html
@@ -1,133 +1,118 @@
 <!DOCTYPE HTML>
 <!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Strata by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-	<head>
-		<title>MRP Consulting - Business coaching and consultancy</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<html lang="en">
+<head>
+    <title>MRP Consulting - Business coaching and consultancy</title>
+    <meta charset="utf-8" />
+    <meta name="google" content="notranslate">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index-en.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.
-				</div>
-			</header>
+    <!-- Header -->
+    <header id="header">
+        <div class="inner">
+            <a href="index-en.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+            <h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.</h1>
+        </div>
+    </header>
 
-		<!-- Main -->
-			<div id="main">
+    <!-- Main -->
+    <div id="main">
 
-				<!-- One -->
-					<section id="one">
-						<div style="text-align: center;">
-  						<img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
-						</div>
-						<div style="text-align: center; font-style: italic;">
-						<h2>Clear communication, confident leadership</h2>
-						</div>
-						<div style="text-align: center;">
-  							<a href="testimonials-en.html">English</a> | 
-  							<a href="testimonials-fr.html">Français</a>
-						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
-						</div>
-						<ul class="actions">
-							<li><a href="index-en.html" class="button">Home</a></li>
-							<li><a href="about-en.html" class="button">About Me</a></li>
-							<li><a href="services-en.html" class="button">Services</a></li>
-							<li><a href="testimonials-en.html" class="button">Testimonials</a></li>
-						</ul>
-						<header class="major">
-							<h2>Testimonials</h2>
-						</header><blockquote>
-						"Working with Morgan was like giving my business a double espresso shot-suddenly everything was clearer, sharper, and moving in the right direction. Their programme wasn’t just helpful; it was genuinely enjoyable. Practical, punchy, and packed with insights I could actually use, not just nod at and forget the next day. I came in overwhelmed and left with a plan, a system, and a grin. If you get the chance to work with them-take it. Your future self will high-five you."
-						</blockquote>
-						<p style="text-align: right;">- M. Hopson
-						<hr class="custom-line">	
-						</p>
-						<blockquote>
-						“Morgan brought a rare blend of
-						technical expertise and leadership
-						insight to our team. As someone who
-						truly understands both the engineering
-						side and the executive mindset, he
-						helped us overcome long-standing
-						communication issues between
-						departments. His workshops were clear,
-						engaging, and full of practical strategies
-						that we started using immediately. He’s a
-						fantastic communicator and an even
-						better coach-personable,
-						knowledgeable, and completely tuned in
-						to the real challenges of today’s
-						workplace.”</blockquote>
-						<p style="text-align: right;">- P. Moon
-						</p>
-						<hr class="custom-line">	
-						<blockquote>
-						“Morgan is one of those rare consultants
-						who can hold a room of technical leads
-						and C-suite executives with equal
-						confidence. His presentation style is
-						natural, compelling, and grounded in
-						real-world experience. The feedback
-						from his sessions was overwhelmingly
-						positive, and our team felt seen, heard,
-						and motivated. We were especially
-						impressed by how he helped bridge
-						communication gaps that had been
-						holding us back. If you need someone
-						who can connect the dots between
-						business and tech-he’s your guy.”</blockquote>
-						<p style="text-align: right;">- J. Martin
-						</p>
-						
-					</section>
+        <!-- Section One: Testimonials -->
+        <section id="one">
+            <div style="text-align: center;">
+                <img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
+            </div>
+            <div style="text-align: center; font-style: italic;">
+                <h2>Clear communication, confident leadership</h2>
+            </div>
+            <div style="text-align: center;">
+                <a href="testimonials-en.html">English</a> | 
+                <a href="testimonials-fr.html">Français</a>
+                <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
+            </div>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>If you think my services will benefit your business, drop me a line and let’s meet.
-						<div class="row">
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"></h3></a>
-										<a href="mailto:morgan@mrpconsulting.fr">morgan@mrpconsulting.fr</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
+            <ul class="actions">
+                <li><a href="index-en.html" class="button">Home</a></li>
+                <li><a href="about-en.html" class="button">About Me</a></li>
+                <li><a href="services-en.html" class="button">Services</a></li>
+                <li><a href="testimonials-en.html" class="button">Testimonials</a></li>
+                <li><a href="casestudies-en.html" class="button">Case Studies</a></li>
+            </ul>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="labeled-icons">
-						<ul class="labeled-icons"><li><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@mrpconsulting.fr" class="label">morgan@mrpconsulting.fr</a>
-						</li></ul>
-					</div>
-					<ul class="copyright">
-						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+            <header class="major">
+                <h2>Testimonials</h2>
+            </header>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+            <blockquote>
+                "Working with Morgan was like giving my business a double espresso shot—suddenly everything was clearer, sharper, and moving in the right direction. Their programme wasn't just helpful; it was genuinely enjoyable. Practical, punchy, and packed with insights I could actually use, not just nod at and forget the next day. I came in overwhelmed and left with a plan, a system, and a grin. If you get the chance to work with them—take it. Your future self will high-five you."
+            </blockquote>
+            <p style="text-align: right;">- M. Hopson</p>
+            <hr class="custom-line">
 
-	</body>
+            <blockquote>
+                “Morgan brought a rare blend of technical expertise and leadership insight to our team. As someone who truly understands both the engineering side and the executive mindset, he helped us overcome long-standing communication issues between departments. His workshops were clear, engaging, and full of practical strategies that we started using immediately. He's a fantastic communicator and an even better coach—personable, knowledgeable, and completely tuned in to the real challenges of today's workplace.”
+            </blockquote>
+            <p style="text-align: right;">- P. Moon</p>
+            <hr class="custom-line">
+
+            <blockquote>
+                “Morgan is one of those rare consultants who can hold a room of technical leads and C-suite executives with equal confidence. His presentation style is natural, compelling, and grounded in real-world experience. The feedback from his sessions was overwhelmingly positive, and our team felt seen, heard, and motivated. We were especially impressed by how he helped bridge communication gaps that had been holding us back. If you need someone who can connect the dots between business and tech—he's your guy.”
+            </blockquote>
+            <p style="text-align: right;">- J. Martin</p>
+
+        </section>
+
+        <!-- Section Three: Contact -->
+        <section id="three">
+            <h2>Get In Touch</h2>
+            <p>If you think my services will benefit your business, drop me a line and let's meet.</p>
+            <div class="row">
+                <div class="col-4 col-12-small">
+                    <ul class="labeled-icons">
+                        <li>
+                            <h3><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"></a></h3>
+                            <a href="mailto:morgan@morganpugh.com">morgan@morganpugh.com</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+    </div>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <div class="labeled-icons">
+                <ul class="labeled-icons">
+                    <li>
+                        <a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
+                        <a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
+                    </li>
+                </ul>
+            </div>
+            <ul class="copyright">
+                <li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
+</body>
 </html>
