--- a/template-en.html
+++ b/template-en.html
@@ -4,51 +4,58 @@
     html5up.net | @ajlkn
     Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html lang="fr">
+<html lang="en">
 <head>
-    <title>MRP Consulting - Coaching et conseil en entreprise</title>
+    <title>MRP Consulting - Business coaching and consultancy</title>
     <meta charset="utf-8" />
     <meta name="google" content="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body class="is-preload">
+
     <!-- Header -->
     <header id="header">
         <div class="inner">
-            <a href="index-fr.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-            <h1><strong>Je suis Morgan</strong>, consultant en affaires anglophone spécialisé dans les différences culturelles, le bien-être des employés et les stratégies de management efficaces.</h1>
+            <a href="index-en.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+            <h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.</h1>
         </div>
     </header>
 
     <!-- Main -->
     <div id="main">
-        <!-- One -->
+        <!-- Section One -->
         <section id="one">
-            <div style="text-align:center;"><img src="images/logo.png" alt="" style="width:40%;height:auto;" /></div>
-            <div style="text-align:center;font-style:italic;"><h2>Une communication claire, un leadership affirmé</h2></div>
+            <div style="text-align:center;">
+                <img src="images/logo.png" alt="" style="width:40%; height:auto;" />
+            </div>
+            <div style="text-align:center; font-style:italic;">
+                <h2>Clear communication, confident leadership</h2>
+            </div>
             <div style="text-align:center;">
                 <a href="index-en.html">English</a> | 
                 <a href="index-fr.html">Français</a>
-                <hr style="width:115px;margin:10px auto;border:0.5px solid #ffffff;">
+                <hr style="width:115px; margin:10px auto; border:0.5px solid #ffffff;">
             </div>
+
             <ul class="actions">
-                <li><a href="index-fr.html" class="button">Accueil</a></li>
-                <li><a href="about-fr.html" class="button">À propos de moi</a></li>
-                <li><a href="services-fr.html" class="button">Services</a></li>
-                <li><a href="testimonials-fr.html" class="button">Avis clients</a></li>
-                <li><a href="casestudies-fr.html" class="button">Exemples clients</a></li>
+                <li><a href="index-en.html" class="button">Home</a></li>
+                <li><a href="about-en.html" class="button">About Me</a></li>
+                <li><a href="services-en.html" class="button">Services</a></li>
+                <li><a href="testimonials-en.html" class="button">Testimonials</a></li>
+                <li><a href="casestudies-en.html" class="button">Case Studies</a></li>
             </ul>
-            <header class="major"><h2>Salut, moi c'est Morgan 👋</h2></header>
-            <p>Consultant britannique avec plus de 20 ans d'expérience en développement logiciel, gestion de projet et leadership technique. Basé à Lyon, j'aide les entreprises à communiquer avec assurance et clarté en anglais, afin de renforcer leurs relations avec des clients, partenaires et parties prenantes internationaux.</p>
-            <p>Grâce à un accompagnement personnalisé en anglais des affaires, présentations, argumentaires de vente et négociations, j'améliore les compétences en communication et en leadership, tout en proposant des stratégies concrètes pour la gestion du temps, la résolution de problèmes et la réduction du stress.</p>
-            <p>Mon objectif est de fournir aux équipes et aux individus les outils nécessaires pour exceller à l'international, rester productifs et développer des compétences en leadership adaptées au succès global. Je suis spécialisé dans la clarté des messages, la résolution de conflits et la gestion proactive du stress et du burnout.</p>
+
+            <header class="major">
+                <h2>English Template</h2>
+            </header>
+            <p>Text goes here</p>
         </section>
 
-        <!-- Three -->
+        <!-- Section Three: Contact -->
         <section id="three">
-            <h2>Contact</h2>
-            <p>Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous.</p>
+            <h2>Get In Touch</h2>
+            <p>If you think my services will benefit your business, drop me a line and let’s meet.</p>
             <div class="row">
                 <div class="col-4 col-12-small">
                     <ul class="labeled-icons">
@@ -87,5 +94,6 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+
 </body>
 </html>
