--- a/about-fr.html
+++ b/about-fr.html
@@ -59,8 +59,8 @@
                 <div class="col-4 col-12-small">
                     <ul class="labeled-icons">
                         <li>
-                            <h3><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"></a></h3>
-                            <a href="mailto:morgan@morganpugh.com">morgan@morganpugh.com</a>
+                            <h3><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"></a></h3>
+                            <a href="mailto:morgan@mrpconsulting.fr">morgan@mrpconsulting.fr</a>
                         </li>
                     </ul>
                 </div>
@@ -74,8 +74,8 @@
             <div class="labeled-icons">
                 <ul class="labeled-icons">
                     <li>
-                        <a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
-                        <a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
+                        <a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"><span class="label">Email</span></a>
+                        <a href="mailto:morgan@mrpconsulting.fr" class="label">morgan@mrpconsulting.fr</a>
                     </li>
                 </ul>
             </div>
